Fixed secondary navbar visibility

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 header {
-    transition: transform 0.7s ease-in-out;
+    transition: transform 0.4s ease-in-out;
   }
   
   header.hidden {
